--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
     "bcrypt": "^5.1.1",
@@ -38,19 +36,26 @@
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "mysql2": "^3.6.5",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^18.19.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -65,12 +70,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/multer": "^1.4.11",
-    "@types/nodemailer": "^6.4.14",
-    "@types/passport-jwt": "^3.0.13",
-    "@types/passport-local": "^1.0.38"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
