--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
+    "http-proxy-middleware": "^3.0.0",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.11",
     "passport": "^0.7.0",
