--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
-  "builds": [{ "src": "src/main.ts", "use": "@vercel/node" }],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "vercel-sapper"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
